--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <div class='content'>
       <img class='center' src='/images/logo.png' alt='WideFix logo' />
-      <h1>Integrate online payments into your business.</h1>
+      <h1>We cut costs on manual billing with online payments solutions.</h1>
       <a href='mailto:call@widefix.com'>call@widefix.com</a>
     </div>
   </body>
