--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <body>
     <div class='content'>
       <img class='center' src='/images/logo.png' alt='WideFix logo' />
+      <script type="text/javascript" src="https://widget.clutch.co/static/js/widget.js"></script> <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="12" data-height="375" data-nofollow="true" data-expandifr="true" data-scale="100" data-scale="100" data-reviews="2009400,1490888,1399992,1385286" data-clutchcompany-id="1340654"></div>
       <h1>We cut costs on manual billing with online payments solutions.</h1>
       <a href='mailto:call@widefix.com'>call@widefix.com</a>
     </div>
