--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>WideFix - Integrate online payments</title>
+    <title>WideFix - The best Ruby on Rails applications maintenance</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -48,7 +48,7 @@
     <div class='content'>
       <img class='center' src='/images/logo.png' alt='WideFix logo' />
       <script type="text/javascript" src="https://widget.clutch.co/static/js/widget.js"></script> <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="12" data-height="375" data-nofollow="true" data-expandifr="true" data-scale="100" data-scale="100" data-reviews="2009400,1490888,1399992,1385286" data-clutchcompany-id="1340654"></div>
-      <h1>We cut costs on manual billing with online payments solutions.</h1>
+      <h1>The best Ruby on Rails applications maintenance.</h1>
       <a href='mailto:call@widefix.com'>call@widefix.com</a>
     </div>
   </body>
