--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>WideFix - The best Ruby on Rails applications maintenance</title>
+    <title>Optimize your app to get more customers</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -17,6 +17,12 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
+    <meta name="keywords" content="ruby on rails developers,ruby on rails developer,ruby developer,ruby developers,ror developer,rails developer,ruby on rails freelance,ruby on rails development company,hire ruby on rails developer,rails developers,ruby on rails developers for hire,hire ror developer,hire rails developer,hire ruby on rails developers,hire ruby developers,find ruby on rails developers,ruby rails developers,developer ruby on rails,where to find ruby on rails developers,hire ruby on rails programmer,looking for ruby on rails developer,top ruby on rails developers,ruby on rails programmers,ruby on rails programmer,rails programmers,find rails developers,rails programmer,ruby on rails developer needed,ruby on rails engineer,freelance ruby on rails developer,ruby and rails developer,ruby rails developer,ruby on rails development firms,hiring ruby on rails developers,hire ruby on rails,ruby web developer,hire ror developers,what is ruby on rails developer,rails gigs,best ruby on rails developers,hire rails developers,ruby-on-rails developer,ruby on rails gigs,ror programmers,ruby on rails candidates,rails freelance developer,ruby on rails freelancers,ruby on rails coders" />
+    <meta name="description" content="Optimize the performance of your application to win over more customers. Our team of experts at Widefix will fix all underlying issues, so your app runs smoothly.
+
+    It’s not enough to fix a bug. When you work with us, all underlying issues in your application get fixed. That way, your app won’t be slowed down by a new problem each week.
+
+    To do this right at Widefix, our experts are specialized in a wide range of Ruby applications, such as Ruby on Rails, Hanami, Sinatra, Grape, Roda, Rack, pure Ruby, and fully custom Ruby applications." />
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
